--- a/_patterns/buttons/config.yml
+++ b/_patterns/buttons/config.yml
@@ -3,7 +3,7 @@ description: |
   Buttons should be used in situations where a dramatic, obvious action is required. Try not to over use buttons because they should be the primary call-to-action for a screen.
 
 patterns:
-  buttons:
+  primary-btn:
     fields:
       - name: text
         type: string
@@ -11,4 +11,19 @@ patterns:
       - name: url
         type: url
         example: "/index/"
-    width: "12em"
+  dark:
+    fields:
+      - name: text
+        type: string
+        example: "See Results"
+      - name: url
+        type: url
+        example: "/index/"
+  ghost:
+    fields:
+      - name: text
+        type: string
+        example: "See Results"
+      - name: url
+        type: url
+        example: "/index/"
